fix(form-field): aligned hints' margin,gap (#DS-4358) (#1124)

--- a/packages/components/form-field/fieldset-tokens.scss
+++ b/packages/components/form-field/fieldset-tokens.scss
@@ -1,5 +1,6 @@
 .kbq-fieldset {
     --kbq-fieldset-legend-margin: var(--kbq-size-s);
-    --kbq-form-field-hint-size-margin-top: var(--kbq-size-m);
+    --kbq-form-field-hint-size-margin-top: var(--kbq-size-xs);
     --kbq-form-field-hint-text: var(--kbq-foreground-contrast-secondary);
+    --kbq-form-field-hint-size-gap: var(--kbq-size-xxs);
 }
